# VoiceMind

./: .gitmodules  README.md  platformio.ini
VoskNote/app/: CMakeLists.txt  build.gradle.kts  settings.gradle.kts
VoskNote/app/gradle/: libs.versions.toml
VoskNote/app/gradle/wrapper/: gradle-wrapper.properties
VoskNote/app/manifests/: AndroidManifest.xml
VoskNote/app/src/androidTest/java/com/example/vosknote/: ExampleInstrumentedTest.kt
VoskNote/app/src/main/: AndroidManifest.xml
VoskNote/app/src/main/cpp/: llama_jni.cpp  whisper_jni.cpp
VoskNote/app/src/main/java/com/example/voicemind/: AudioBuffer.kt  AudioRecordingSaver.kt  DailyRecord.kt  DayAdapter.kt  FbankExtractor.kt  GroqHelper.kt  HistoryAdapter.kt  HistoryFragment.kt  LlmHelper.kt  MainActivity.kt  MainPagerAdapter.kt  PhoneMicRecorder.kt  RecordFragment.kt  RecordStorage.kt  SetupActivity.kt  SpeakerDiarizer.kt  SpeakerEmbedder.kt  TextAnalyzer.kt  TextFormatter.kt  VADProcessor.kt  (+6 more)
VoskNote/app/src/main/res/drawable/: bg_badge.xml  bg_calendar_day_selector.xml  bg_drag_handle.xml  bg_gradient_top.xml  bg_input.xml  bg_pill_secondary.xml  bg_record_button.xml  bg_record_button_rec.xml  ic_bluetooth.xml  ic_delete.xml  ic_mic.xml  ic_stop.xml
VoskNote/app/src/main/res/layout/: activity_main.xml  activity_setup.xml  fragment_history.xml  fragment_record.xml  fragment_transcription_detail.xml  item_calendar_day.xml  item_calendar_month_header.xml  item_date_header.xml  item_day.xml  item_day_summary.xml  item_today_entry.xml
VoskNote/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
(+20 files in other folders)
